--- a/src/entities/Test/ui/TestForm/ui/TestForm/TestForm.module.scss
+++ b/src/entities/Test/ui/TestForm/ui/TestForm/TestForm.module.scss
@@ -34,8 +34,8 @@
       justify-content: space-between;
     }
 
-    .input{
-      margin-bottom: 36px;
+    .questionInput{
+      margin-bottom: 28px;
     }
 
     .QuestionSettings{
@@ -88,6 +88,10 @@
     border: none;
     // margin-top: 4px;
     transition: 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
     &:hover{
       background-color: #1583d4;
       cursor: pointer;
@@ -122,6 +126,7 @@
 .selectForm{
   width: 100%;
   margin-bottom: 40px;
+  border-radius: 8px;
 }
 
 .shortAnswerBlock{
@@ -151,5 +156,72 @@
 }
 
 .textareaDescription{
-  margin-top: 20px;
+  margin-top: 36px;
+}
+
+.AddQuestionIcon{
+  font-size: 20px;
+}
+
+.TestFormBlockHead{
+  padding: 32px 24px!important;
+}
+@media(max-width: 800px) {
+  .questionInput{
+    width: 92%!important;
+  }
+  .TestFormBlock{
+    padding: 30px 24px!important;
+  }
+  .selectForm{
+    font-size: 14px;
+    border-radius: 8px;
+  }
+  .answerOptionInput input{
+    font-size: 14px;
+  }
+  .AnswerOptions, .shortAnswerInput{
+    width: 45%!important;
+  }
+  .AddAnswerOption{
+    width: 100%!important;
+  }
+  .QuestionSettings{
+    width: 48%!important;
+  }
+  .answerOptionInput{
+    width: 85%;
+  }
+  .Icon{
+    font-size: 26px!important;
+  }
+  .textareaNewQuestion{
+    font-size: 15px;
+  }
+  .AddQuestion{
+    font-size: 15px!important;
+  }
+}
+
+@media(max-width: 550px){
+  .settings{
+    flex-direction: column;
+    gap: 36px;
+  }
+  .AnswerOptions, .shortAnswerInput,.QuestionSettings{
+    width: 100%!important;
+  }
+  .TestFormIcons{
+    top: 14px!important;
+    right: 14px!important;
+  }
+  .questionInput{
+    width: 96%!important;
+  }
+  .selectForm{
+    margin-bottom: 25px;
+  }
+  .TestFormBlock{
+    padding: 24px 18px !important;
+  }
 }
