[#46] system test templates
Add:
- The ability to create a test template based on the current test
- The ability to upload a template file to the current test

--- a/src/entities/Test/ui/TestForm/ui/TestForm/TestForm.module.scss
+++ b/src/entities/Test/ui/TestForm/ui/TestForm/TestForm.module.scss
@@ -59,7 +59,7 @@
       }
 
       .AddAnswerOption{
-        width: 242px;
+        width: 100%;
         background-color: var(--main-color);
         color: #fff;
         padding: 12px 0px;
@@ -166,6 +166,11 @@
 .TestFormBlockHead{
   padding: 32px 24px!important;
 }
+
+.answerOptionInput{
+  width: 300px;
+}
+
 @media(max-width: 800px) {
   .questionInput{
     width: 92%!important;
