--- a/src/pages/TestEditPage/ui/TestEditPage/TestEditPage.module.scss
+++ b/src/pages/TestEditPage/ui/TestEditPage/TestEditPage.module.scss
@@ -89,6 +89,28 @@
   cursor: pointer;
 }
 
+.templateInputs{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.downloadTemplateButton{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-size: 18px;
+  font-weight: 600;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.downloadTemplateButtonIcon{
+  font-size: 32px;
+}
+
 @media(max-width: 1020px){
   .tabContentResult{
     padding: 0px;
@@ -120,6 +142,14 @@
   .settingCheckbox{
     width: 20px;
     height: 20px;
+  }
+  .downloadTemplateButton{
+    font-size: 14px;
+    padding: 15px;
+  }
+  .downloadTemplateButtonIcon{
+   font-size: 24px;
+
   }
 }
 
@@ -162,6 +192,9 @@
   }
   .tabsList{
     margin-top: 4px;
+  }
+  .downloadTemplateButton{
+    margin-top: 10px;
   }
 }
 
