[#48] custom score setting
Add:
- custom score setting for all types question
- add table admins
- fix template download

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -14,6 +14,12 @@
 }
 
 
+@media(hover:none){
+  .Button:hover {
+    background-color: var(--main-color);
+  }
+}
+
 .clear {
   padding: 0;
   border: none;
