--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -34,6 +34,13 @@
   }
 }
 
+@media (hover:none) {
+  .logo:hover {
+    text-decoration: none;
+    text-underline-offset: unset;
+  }
+}
+
 .rightContent {
 
   /*   position: relative; */
