--- a/src/entities/Test/ui/TestForm/ui/TestForm/TestForm.module.scss
+++ b/src/entities/Test/ui/TestForm/ui/TestForm/TestForm.module.scss
@@ -48,7 +48,7 @@
     .AnswerOptions{
       display: flex;
       flex-direction: column;
-      width: min-content;
+      width: 45%;
       gap: 20px;
 
       .AnswerOptionLabel{
