--- a/src/pages/MePage/ui/TeacherTests/TeacherTests.module.scss
+++ b/src/pages/MePage/ui/TeacherTests/TeacherTests.module.scss
@@ -21,17 +21,20 @@
   flex-direction: column;
   width: 32%;
   gap: 10px;
-  padding: 30px 48px 24px 16px;
-  box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px, rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 2px 2px -1px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px, rgba(42, 51, 70, 0.03) 0px 10px 10px -5px, rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
+  padding: 20px 48px 24px 16px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 6px 24px 0px, rgba(0, 0, 0, 0.1) 0px 0px 0px 1px;
   transition: 0.5s ease-in-out;
   border-radius: 10px;
   position: relative;
   text-decoration: none;
-  background-color: #fff;
+  background-color: #fdfdfd;
   height: 240px;
+}
+@media(hover:none){
+  .test:hover{
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 6px 24px 0px, rgba(0, 0, 0, 0.1) 0px 0px 0px 1px;
   }
-
-
+}
 .testIcon{
   font-size: 28px;
 }
@@ -112,9 +115,9 @@
 @media(max-width:500px){
   .test{
     gap: 5px;
-    padding: 30px 48px 24px 12px;
-
+    padding:14px 48px 24px 12px;
   }
+
   .testItem{
     gap: 6px;
   }
